--- a/cloud/index.html
+++ b/cloud/index.html
@@ -4,7 +4,7 @@
       <input type="text" id="message-input">
       <button type="submit">Send</button>
     </form>
-    <div id="received-messages"></div>
+    <div id="received-messages" style="display:flex;flex-flow: column-reverse;"></div>
 
     <form id="auth-form" style="display:none">
       <label for="auth-token-input">Authentication Token:</label>
